...
    <string name="gesture_name_swipe_right_two">Swipe right using two fingers</string>
    <string name="gesture_name_swipe_right_three">Swipe right using three fingers</string>
    <string name="gesture_name_swipe_up_two">Swipe up using two fingers</string>
    <string name="gesture_name_swipe_up_three">Swipe up using three fingers</string>
    <string name="gestures_pointers_two">Using two fingers</string>
    <string name="gestures_pointers_three">Using three fingers</string>
    <string name="get_help">Get help</string>
    <string name="help">Help</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="high_accuracy_mode_channel_name">High accuracy location</string>
    <string name="high_accuracy_mode_notification_title">High accuracy (GPS) mode enabled</string>
    <string name="hold_to_reorder">Hold to reorder</string>
...
    <string name="mute_unmute">Mute/Unmute</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="areas">Areas</string>
    <string name="more_entities">More entities</string>
    <string name="need_help">Need help?</string>
    <string name="navigate_up">Navigate up</string>
    <string name="nfc_btn_create_duplicate">Create duplicate</string>
    <string name="nfc_btn_fire_event">Fire event</string>
    <string name="nfc_btn_read_tag">Read NFC tag</string>
    <string name="nfc_btn_share">Share</string>
    <string name="nfc_btn_write_tag">Write NFC tag</string>
    <string name="nfc_event_fired_fail">Firing event failed, please try again</string>
...
    <string name="connection_security_level_title">Remote connection security level</string>
    <string name="connection_security_level_default_summary">Only connect to the server when we are sure that connection is encrypted or you are at home</string>
    <string name="connection_security_most_secure">Most secure: Allow this app to know when you\'re home</string>
    <string name="connection_security_less_secure">Less secure: Do not allow this app to know when you\'re home</string>
    <string name="branding_icon_content_description">Alten branding icon</string>
    <string name="loading_content_description">Loading</string>
    <string name="searching_home_network">Searching on\nhome network</string>
    <string name="server_discovery_no_server_info">Check that your connection to internet. You can enter the address manually if you know it.</string>
    <string name="server_discovery_connect">Connect</string>
    <string name="welcome_alten_title">AltenEMS App</string>
    <string name="welcome_details">Access your AltenEMS dashboard.</string>
    <string name="welcome_connect_to_ha">Connect to server</string>
    <string name="welcome_learn_more">Learn more</string>
    <string name="name_your_device_title">How would you like to name this device?</string>
    <string name="name_your_device_content">This is used to identify your device.</string>
    <string name="name_your_device_save">Save</string>
    <string name="manual_server_title">What is your Alten address?</string>
    <string name="manual_server_connect">Connect</string>
    <string name="manual_server_wrong_url">Invalid Alten address</string>
    <string name="connection_screen_malformed_url">Verify that your Alten address is correct</string>
    <string name="clear_text">Clear text</string>
    <string name="local_first_title">Local by default.\nRemote when you\'re ready.</string>
...
    <string name="block_insecure_missing_location">Location access is required to detect your home network. Android requires this because network information can be used to infer your location.</string>
    <string name="block_insecure_action_enable_location">Enable location</string>
    <string name="block_insecure_action_configure_home">Configure home network</string>
    <string name="block_insecure_retry">Retry</string>
    <string name="block_insecure_open_settings">Open settings</string>
    <string name="block_insecure_change_security_level">Change security level</string>
    <string name="wear_mtls_content">Your Alten server requires TLS client certificate authentication. Select a TLS client certificate file to install it on your Wear OS device.</string>
    <string name="wear_mtls_next">Next</string>
    <string name="wear_mtls_open_error">This password does not open this file.</string>
    <string name="wear_mtls_deselect_file">Deselect file</string>
    <string name="set_home_network_title">What is your home network?</string>
    <string name="set_home_network_wifi_name">Name of the Wi-Fi network at home</string>
    <string name="set_home_network_content">For the best experience, Alten needs to know when you’re connected to your home network.</string>
    <string name="set_home_network_next">Next</string>
...
