...
import io.altenems.companion.android.common.data.altenemsApis
import io.altenems.companion.android.common.data.prefs.NightModeTheme
import timber.log.Timber

const val BLANK_URL = "about:blank"

@VisibleForTesting const val HA_WEBVIEW_TAG = "ha_web_view_tag"

/**
 * A composable that displays a WebView specifically configured for Home Assistant.
 * This WebView includes default settings for Home Assistant, such as:
 * - Javascript/dom storage enabled
 * - Zoom controls disabled
...
